--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "ShiraoriBOT-Md",
-  "description": "Lightweight WhatsApp Bot",
-  "repository": "https://github.com/ilmanhdyt/ShiraoriBOT-Md",
-  "logo": "https://node-js-sample.herokuapp.com/node.png",
+  "name": "GataBot-MD",
+  "description": "GataBot por Gata Dios",
+  "repository": "https://github.com/GataNina-Li/GataBot-MD",
+  "logo": "https://i.imgur.com/8fK4h6F.jpg",
   "keywords": [
     "bot",
     "whatsapp",
