--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "GataBot-MD",
     "version": "3.5.4",
-    "description": "Super Bot WhatsApp",
+    "description": "Simple Bot WhatsApp",
     "depecrated": false,
     "main": "index.js",
     "directories": {
